# iron-providers

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  MIGRATION.md  README.md  UPGRADE_AND_ARCHITECTURE_PLAN.md  package-lock.json  tasks.py
.cargo/: audit.toml
.githooks/: pre-commit
.github/: pull_request_template.md
.github/scripts/: bump_cargo_version.py
.github/workflows/: pages.yml  pull-request.yml  release-manual.yml  release-patch.yml
graphify-out/: .graphify_python  .graphify_root  .graphify_uncached.txt  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
openspec/changes/add-provider-credential-oauth/: proposal.md  tasks.md
openspec/changes/add-provider-system-prompt-fragments/: design.md  tasks.md
openspec/changes/archive/2026-04-09-fix-chat-completions-stream-tool-call-assembly/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-19-provider-architecture-refactor/: proposal.md  tasks.md
openspec/changes/archive/2026-05-24-add-provider-credential-oauth/: design.md
openspec/changes/archive/2026-05-24-add-provider-system-prompt-fragments/: proposal.md
openspec/changes/archive/2026-05-24-ollama-cloud-and-local-models/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-10-expose-provider-token-usage/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-20-add-automated-documentation/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-20-add-provider-guidance-overrides/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-20-support-upstream-owned-provider-profiles/: design.md  proposal.md
openspec/changes/provider-architecture-refactor/: design.md
openspec/changes/support-upstream-owned-provider-profiles/: tasks.md
openspec/specs/automated-documentation/: spec.md
openspec/specs/chat-completions-stream-assembly/: spec.md
openspec/specs/local-model-provider/: spec.md
openspec/specs/ollama-cloud-integration/: spec.md
openspec/specs/provider-architecture-refactor/: spec.md
openspec/specs/provider-credential-oauth/: spec.md
openspec/specs/provider-system-prompt-fragments/: spec.md
openspec/specs/provider-token-usage/: spec.md
src/: anthropic.rs  auth.rs  codex.rs  completions.rs  connection.rs  error.rs  generic_provider.rs  http_client.rs  lib.rs  mock_provider_tests.rs  model.rs  openai.rs  profile.rs  provider.rs  provider_overrides.rs  registry.rs  sse.rs  stream_util.rs
src/apis/: completions.rs  messages.rs  mod.rs  responses.rs
src/system_prompt_fragments/: anthropic.md  openai.md
tests/: error_tests.rs  model_tests.rs  responses_api_tests.rs  streaming_tests.rs
(+13 files in other folders)
