[package]
name = "iron-providers"
version = "0.1.8"
edition = "2021"
authors = ["Paul Mooring"]
license = "Apache-2.0"
rust-version = "1.91"
description = "Semantic provider boundary with OpenAI Responses API support"
readme = "README.md"
repository = "https://github.com/AgentIron/iron-providers"
exclude = [
    ".opencode/**",
    "openspec/**",
    "tasks.py",
    "Cargo.lock",
]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
futures = "0.3"
pin-project = "1"
reqwest = { version = "0.13", features = ["json", "stream"] }
base64 = "0.22"

# OpenAI SDK - enable features for Responses API
async-openai = { version = "0.36", features = ["responses", "response-types", "_api"] }

# Stream utilities
async-stream = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tokio = { version = "1", features = ["rt", "macros"] }
mockito = "1"
