[package]
name = "iron-providers"
version = "0.2.12"
edition = "2021"
authors = ["Paul Mooring"]
license = "Apache-2.0"
rust-version = "1.96"
description = "Semantic provider boundary for protocol-oriented LLM providers"
readme = "README.md"
repository = "https://github.com/AgentIron/iron-providers"
exclude = [
    ".opencode/**",
    "openspec/**",
    "tasks.py",
    "Cargo.lock",
]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tracing = "0.1.44"
futures = "0.3.32"
pin-project = "1.1.13"
reqwest = { version = "0.13.4", features = ["json", "stream"] }
base64 = "0.22.1"

# Stream utilities
async-stream = "0.3.6"

[dev-dependencies]
tokio-test = "0.4.5"
tokio = { version = "1.52.3", features = ["rt", "macros"] }
mockito = "1.7.2"
